--- a/index.css
+++ b/index.css
@@ -4,11 +4,19 @@
 *{
     margin: 0;
     padding: 0;
-
+    
 }
 
+body{
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
+}
+body::-webkit-scrollbar {
+    display: none;
+  }
 
-section{
+.header{
     height: 100vh;
     padding: 0;
     margin: 0;
@@ -49,21 +57,37 @@ a{
 
 }
 
+header h1 a{
+    color: white;
+    text-decoration-color: rgba(255, 255, 255, 0);
+
+}
+
+header h1 a:hover{
+    /* color: red; */
+    text-decoration: line-through;
+    text-decoration-color: rgb(255, 0, 0);
+    text-decoration-thickness: 15px;
+    transition: 0.3s;
+}
+
 nav a{
     display: inline-block;
     margin: 0 2vw 0 0;
+    text-decoration-color: rgba(255, 255, 255, 0);
     color: rgb(142, 142, 142);
 
 }
 ::selection {
     text-shadow: none;
-    background: rgba(255, 0, 43, 0.8);
+    background-color: rgb(255, 0, 0);
 }
 
 nav a:hover {
     text-decoration: line-through;
     text-decoration-color: red;
-    text-decoration-thickness: 3px;
+    text-decoration-thickness: 5px;
+    transition: 0.3s;
 
 }
 
@@ -75,9 +99,30 @@ nav a:hover {
     font-size: 10px;
 }
 
+.fuck{
+    height: 100vh;
+    padding: 0;
+    margin: 0;
+    background: white;
+    color: #111111;
+    font-family: 'Space Mono', monospace;
+    display: flex;
+    justify-content: end;
+}
+
+.off{
+    height: 100%;
+    max-width: 1000px;
+    padding: 8vmin;
+    box-sizing: border-box;
+    text-align: right;
+}
+
+
+
 @media (max-width: 800px) {
     .header h1 {
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
     .inspired{
         left: 2%;
