--- a/index.css
+++ b/index.css
@@ -57,6 +57,25 @@ a{
 
 }
 
+.span{
+    color: red;
+    animation-duration: 1s;
+    animation-name: opacity;
+    animation-iteration-count: infinite;
+}
+
+@keyframes opacity{
+    from{
+        opacity: 0;
+    }
+    50%{
+        opacity: 1;
+    }
+    to{
+        opacity: 0;
+    }
+}
+
 header h1 a{
     color: white;
     text-decoration-color: rgba(255, 255, 255, 0);
@@ -91,13 +110,6 @@ nav a:hover {
 
 }
 
-.inspired{
-    margin-top: 10px;
-    position: absolute;
-    left: 5%;
-    bottom: 5%;
-    font-size: 10px;
-}
 
 .fuck{
     height: 100vh;
