--- a/index.css
+++ b/index.css
@@ -65,13 +65,13 @@ a{
 }
 
 @keyframes opacity{
-    from{
+    0%{
         opacity: 0;
     }
     50%{
         opacity: 1;
     }
-    to{
+    100%{
         opacity: 0;
     }
 }
