--- a/index.css
+++ b/index.css
@@ -64,7 +64,7 @@ a{
     animation-iteration-count: infinite;
 }
 
-@keyframes opacity{
+@-webkit-keyframes opacity{
     0%{
         opacity: 0;
     }
