--- a/index.css
+++ b/index.css
@@ -9,9 +9,11 @@
 }
 
 body{
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-rendering: optimizeLegibility;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    
 }
 body::-webkit-scrollbar {
     display: none;
