--- a/index.css
+++ b/index.css
@@ -4,16 +4,16 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: inherit;
     
 }
 
 body{
-    height: 100vh;
+    height: 100%;
     margin: 0;
     padding: 0;
-    width: 100%;
-    
+    box-sizing: border-box;
+
 }
 body::-webkit-scrollbar {
     display: none;
@@ -28,6 +28,7 @@ body::-webkit-scrollbar {
     font-family: 'Space Mono', monospace;
     display: flex;
     justify-content: end;
+    overflow: hidden;
 
 }
 
