--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@
 }
 
 body{
-    height: 100%;
+    height: 100vh;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -20,8 +20,10 @@ body::-webkit-scrollbar {
   }
 
 .header{
-    height: 100vh;
+    height: 100%;
     padding: 0;
+    padding: 8vmin;
+
     margin: 0;
     background: #111111;
     color: white;
@@ -35,7 +37,7 @@ body::-webkit-scrollbar {
 .inheader{
     height: 100%;
     max-width: 1000px;
-    padding: 8vmin;
+    /* padding: 8vmin; */
     box-sizing: border-box;
     text-align: right;
     display: flex;
