--- a/index.css
+++ b/index.css
@@ -1,3 +1,12 @@
+body {
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
+}
+html {
+    height: -webkit-fill-available;
+}
+
+
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
 
 
@@ -9,7 +18,7 @@
 }
 
 body{
-    height: 100vh;
+
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -17,10 +26,11 @@ body{
 }
 body::-webkit-scrollbar {
     display: none;
-  }
+}
+
 
 .header{
-    height: 100%;
+    height: 100vh;
     padding: 0;
     padding: 8vmin;
 
