--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@
 }
 
 body{
-
+    height: 100vh;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -21,7 +21,7 @@ body::-webkit-scrollbar {
 
 
 .header{
-    height: 100vh;
+    height: 100%;
     padding: 8vmin;
 
     margin: 0;
@@ -35,7 +35,7 @@ body::-webkit-scrollbar {
 }
 
 .inheader{
-    height: 100%;
+    /* height: 100%; */
     max-width: 1000px;
     box-sizing: border-box;
     text-align: right;
