--- a/index.css
+++ b/index.css
@@ -149,7 +149,10 @@ nav a:hover {
     nav {
         display: flex;
         flex-direction: column;
+        margin: 2vw 0 50px 0;
+        
     }
+    
     nav a {
         margin: 10px 0 0 0;
     }
