--- a/index.css
+++ b/index.css
@@ -22,9 +22,9 @@ body::-webkit-scrollbar {
 .header{
     height: 100vh;
     padding: 8vmin;
-
+    background-image: url(/images/background.jpg);
     margin: 0;
-    background: #111111;
+    /* background: #111111; */
     color: white;
     font-family: 'Space Mono', monospace;
     display: flex;
@@ -62,7 +62,7 @@ a{
 }
 
 .span{
-    color: red;
+    color: rgb(121, 193, 149);
     animation-duration: 1s;
     animation-name: opacity;
     animation-iteration-count: infinite;
@@ -89,7 +89,7 @@ header h1 a{
 header h1 a:hover{
     /* color: red; */
     text-decoration: line-through;
-    text-decoration-color: rgb(255, 0, 0);
+    text-decoration-color: rgb(121, 193, 149);
     text-decoration-thickness: 15px;
     transition: 0.3s;
 }
@@ -103,12 +103,12 @@ nav a{
 }
 ::selection {
     text-shadow: none;
-    background-color: rgb(255, 0, 0);
+    background-color: ;
 }
 
 nav a:hover {
     text-decoration: line-through;
-    text-decoration-color: red;
+    text-decoration-color: rgb(121, 193, 149);
     text-decoration-thickness: 5px;
     transition: 0.3s;
 
@@ -130,6 +130,8 @@ nav a:hover {
     height: 100%;
     max-width: 1000px;
     padding: 8vmin;
+    color: rgb(121, 193, 149);
+    font-size: 45px;
     box-sizing: border-box;
     text-align: right;
 }
