--- a/index.css
+++ b/index.css
@@ -20,21 +20,50 @@ body::-webkit-scrollbar {
     display: none;
 }
 
-
-
+.outer{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+}
 
 .header{
     height: 100vh;
+    width: 100%;
     padding: 8vmin;
+    /* transform: translateX(2%); */
     /* background-image: url(/images/background.jpg); */
     margin: 0;
     background: #111111;
+    overflow: hidden;
     color: white;
     font-family: 'Space Mono', monospace;
     display: flex;
     justify-content: end;
     overflow: hidden;
 
+}
+
+.fluidbox{
+    min-height: 500%;
+    min-width: 250%;
+    transform: translate(0, -200%) rotate(45deg);
+    position: absolute;
+    border-radius: 35%;
+    background:white;
+    z-index: 1;
+    animation: spin 2s linear;
+    
+}
+@keyframes spin {
+    0%{
+        transform: translateY(-79%);
+    }
+    100%{
+
+        transform: translateY(-5000px) rotate(200deg);
+    }
 }
 
 
@@ -46,6 +75,7 @@ body::-webkit-scrollbar {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: flex-end;
     /* position: relative; */
     /* line-height: 10px; */
 }
@@ -59,12 +89,6 @@ header h1{
 
 }
 
-marquee{
-    transform: translateY(25px);
-    /* margin-top: -1000px; */
-    margin: 0;
-    padding: 0;
-}
 #instaa{
     color: inherit;
     
@@ -120,6 +144,7 @@ nav a{
     text-decoration-color: rgba(255, 255, 255, 0);
     /* color: #f5ffd4; */
     color: inherit;
+    
 
 
 }
@@ -158,39 +183,85 @@ nav a:hover {
     text-align: right;
 }
 
-
+/* @media (min-width: 800px){
+    .header{
+        border-left: 50px dashed white;
+        /* border-top: 1px solid white; */
+        
+    /* }
+} */
 
 @media (max-width: 800px) {
     .header h1 {
         font-size: 2rem;
     }
-    marquee{
-        transform: translateY(11px);
-        /* margin-top: -1000px; */
-        margin: 0;
-        padding: 0;
-    }
+    
     .inspired{
         left: 2%;
         bottom: 2%;
     }
+    .fluidbox{
+        min-height: 200%;
+        min-width: 200%;
+        transform: translate(0, -200%) rotate(45deg);
+        position: absolute;
+        border-radius: 37%;
+        background:white;
+        z-index: 1;
+        animation: spin1 3s linear;
+        
+    }
+    @keyframes spin1 {
+        0%{
+            transform: translateY(-50%);
+        }
+        100%{
+    
+            transform: translateY(-4000px) rotate(360deg);
+        }
+    }
 }
 @media (max-width: 600px) {
     nav {
+        right: 0;
         display: flex;
         flex-direction: column;
-        margin: 2vw 0 50px 0;
+        margin: 2vw 0px 50px;
+        /* width: 10px; */
+        padding: 0;
+        padding-right: 12px;
+        justify-content: flex-end;
+        align-items: flex-end;
+        /* border-right: 3px solid white;
+        border-top: 3px solid white; */
+
         
     }
-    marquee{
-        transform: translateY(8px);
-        /* margin-top: -1000px; */
-        margin: 0;
-        padding: 0;
-    }
+
     
     nav a {
         margin: 10px 0 0 0;
+    }
+
+    .fluidbox{
+        min-height: 200%;
+        min-width: 300%;
+        transform: translate(0, -200%) rotate(45deg);
+        position: absolute;
+        border-radius: 37%;
+        background:white;
+        z-index: 1;
+        animation: spin1 2s linear;
+        
+    }
+    @keyframes spin1 {
+        0%{
+            transform: translateY(-40%);
+        }
+        100%{
+    
+            transform: translateY(-2000px) rotate(360deg);
+        }
     }
 
 }
