--- a/index.css
+++ b/index.css
@@ -37,7 +37,7 @@ body::-webkit-scrollbar {
     margin: 0;
     background: #202020;
     overflow: hidden;
-    color: white;
+    color: #fff7e2;
     font-family: 'Space Mono', monospace;
     display: flex;
     justify-content: end;
@@ -51,7 +51,7 @@ body::-webkit-scrollbar {
     transform: translate(0, -200%) rotate(45deg);
     position: absolute;
     border-radius: 35%;
-    background:white;
+    background:#fff7e2;
     z-index: 1;
     animation: spin 2s linear;
     display: none;
@@ -126,7 +126,7 @@ a{
 }
 
 header h1 a{
-    color: white;
+    color: #fff7e2;
     text-decoration-color: rgba(255, 255, 255, 0);
 
 }
@@ -167,7 +167,7 @@ nav a:hover {
     height: 100vh;
     padding: 0;
     margin: 0;
-    background: white;
+    background: #fff7e2;
     color: #202020;
     font-family: 'Space Mono', monospace;
     display: flex;
@@ -186,8 +186,8 @@ nav a:hover {
 
 /* @media (min-width: 800px){
     .header{
-        border-left: 50px dashed white;
-        /* border-top: 1px solid white; */
+        border-left: 50px dashed #fff7e2;
+        /* border-top: 1px solid #fff7e2; */
         
     /* }
 } */
@@ -207,7 +207,7 @@ nav a:hover {
         transform: translate(0, -200%) rotate(45deg);
         position: absolute;
         border-radius: 37%;
-        background:white;
+        background:#fff7e2;
         z-index: 1;
         animation: spin1 3s linear;
         
@@ -233,8 +233,8 @@ nav a:hover {
         padding-right: 12px;
         justify-content: flex-end;
         align-items: flex-end;
-        /* border-right: 3px solid white;
-        border-top: 3px solid white; */
+        /* border-right: 3px solid #fff7e2;
+        border-top: 3px solid #fff7e2; */
 
         
     }
@@ -250,7 +250,7 @@ nav a:hover {
         transform: translate(0, -200%) rotate(45deg);
         position: absolute;
         border-radius: 37%;
-        background:white;
+        background:#fff7e2;
         z-index: 1;
         animation: spin1 2s linear;
         
